golden/error/lex_number_end_exponent.test
123.456e

# output:
 --> stdin:1:8
  |
1 | 123.456e
  |         ^
Error: Expected a digit of the number's exponent here.
